/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.microlabs.behavioral.strategy;

/**
 * @author rolex
 * @since 2020
 */
public class BlackCardStrategy implements RateStrategy {
    @Override
    public double fee(double price) {
        return price * 0.8;
    }
}
