package com.rolex.microlabs.behavioral.strategy;

/**
 * @author rolex
 * @since 2020
 */
public interface RateStrategy {

    double fee(double price);

}
